err/zc.zk.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/thread'...
Listing './lib/python3.5/site-packages/zc/zk'...
Compiling './lib/python3.5/site-packages/zc/zk/__init__.py'...
***   File "./lib/python3.5/site-packages/zc/zk/__init__.py", line 259
    print 'extra path not trimmed:', cpath
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/zk/monitor.py'...
***   File "./lib/python3.5/site-packages/zc/zk/monitor.py", line 80
    print f.readline(),
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zc/zk/scripts.py'...
***   File "./lib/python3.5/site-packages/zc/zk/scripts.py", line 49
    print data,
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/zk/testing.py'...
***   File "./lib/python3.5/site-packages/zc/zk/testing.py", line 54
    print 'assertion failed: ', mess
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/zk/tests.py'...
***   File "./lib/python3.5/site-packages/zc/zk/tests.py", line 1180
    print 'async callback got', args
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zc.thread-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/zc.zk-2.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
